Revert "SSCSCI-1804 (#5436)"
This reverts commit 087486abcce47ed51ee1b96d21dec95a83f23035.