@@ -1,26 +1,35 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.uploadwelshdocument;
 
-import static java.util.Collections.singletonList;
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.UPDATE_CASE_ONLY;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.UPLOAD_WELSH_DOCUMENT;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.InterlocReviewState.REVIEW_BY_TCW;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
+import junitparams.JUnitParamsRunner;
+import junitparams.Parameters;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
+import org.mockito.junit.MockitoJUnit;
+import org.mockito.junit.MockitoRule;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType;
 import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appeal;
 import uk.gov.hmcts.reform.sscs.ccd.domain.CaseDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.DocumentLink;
 import uk.gov.hmcts.reform.sscs.ccd.domain.DwpDocument;
@@ -37,303 +46,257 @@ import uk.gov.hmcts.reform.sscs.ccd.domain.SscsWelshDocumentDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.State;
 import uk.gov.hmcts.reform.sscs.service.WelshFooterService;
 
-@ExtendWith(MockitoExtension.class)
-class UploadWelshDocumentsAboutToSubmitHandlerTest {
+@RunWith(JUnitParamsRunner.class)
+public class UploadWelshDocumentsAboutToSubmitHandlerTest {
 
     private static final String USER_AUTHORISATION = "Bearer token";
-    private static final String ENGLISH_PDF = "english.pdf";
-
-    @InjectMocks
+    public static final String ENGLISH_PDF = "english.pdf";
     private UploadWelshDocumentsAboutToSubmitHandler handler;
+
+    @Rule
+    public MockitoRule rule = MockitoJUnit.rule();
+
+    @Mock
+    private Callback<SscsCaseData> callback;
+
+    @Mock
+    private CaseDetails<SscsCaseData> caseDetails;
 
     @Mock
     private WelshFooterService welshFooterService;
 
-    @Test
-    void givenCanHandleIsCalled_shouldReturnCorrectResult() {
-        final Callback<SscsCaseData> callbackWithValidEventOption =
-            buildCallback("callbackWithValidEventOption", buildSscsDocuments(false), buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
+    private SscsCaseData sscsCaseData;
 
-        final boolean actualResult = handler.canHandle(CallbackType.ABOUT_TO_SUBMIT, callbackWithValidEventOption);
-
-        assertThat(actualResult).isTrue();
+    @Before
+    public void setUp() {
+        MockitoAnnotations.openMocks(this);
+        handler = new UploadWelshDocumentsAboutToSubmitHandler(welshFooterService);
+        when(callback.getEvent()).thenReturn(EventType.UPLOAD_WELSH_DOCUMENT);
+        sscsCaseData = SscsCaseData.builder().state(State.VALID_APPEAL).appeal(Appeal.builder().build()).build();
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
+        when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
     }
 
     @Test
-    void shouldAddAnErrorIfNoWelshDocumentSelected() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, buildSscsDocuments(false), buildInvalidSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
+    @Parameters(method = "generateCanHandleScenarios")
+    public void givenCanHandleIsCalled_shouldReturnCorrectResult(CallbackType callbackType,
+                                                                 Callback<SscsCaseData> callback,
+                                                                 boolean expectedResult) {
+        boolean actualResult = handler.canHandle(callbackType, callback);
+        assertEquals(expectedResult, actualResult);
+    }
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+
+    @Test
+    public void shouldAddAnErrorIfNoWelshDocumentSelected() {
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, buildSscsDocuments(false), buildInvalidSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
+
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
-        final PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(response).isNotNull();
-        assertThat(response.getErrors().stream().findFirst()).contains("Please select a document to upload");
+        PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertNotNull(response);
+        assertEquals("Please select a document to upload", response.getErrors().stream().findFirst().get());
     }
 
-    @Test
-    void updateCaseWhenOnlyOneDocumentAndOnlyOneSetToRequestTranslationStatusToRequestTranslation() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            buildSscsDocuments(false), buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
-
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
-        caseData.setState(State.VALID_APPEAL);
-
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(caseData.getOriginalDocuments()).isNotNull();
-        assertThat(caseData.getOriginalDocuments().getListItems().getFirst().getCode()).isEqualTo(ENGLISH_PDF);
-        assertThat(caseData.getSscsDocument().getFirst().getValue().getDocumentTranslationStatus().getId())
-            .isEqualTo(SscsDocumentTranslationStatus.TRANSLATION_COMPLETE.getId());
-        assertThat(caseData.getTranslationWorkOutstanding()).isEqualTo("No");
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getOriginalDocumentFileName()).isEqualTo(ENGLISH_PDF);
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getDocumentLanguage()).isEqualTo("welsh");
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isEqualTo(EventType.SEND_TO_DWP.getCcdType());
-    }
 
     @Test
-    void updateCaseWhenOnlyOneDocumentAndMoreThanOneSetToRequestTranslationStatusToRequestTranslation() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            buildSscsDocuments(true), buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
+    public void updateCaseWhenOnlyOneDocumentAndOnlyOneSetToRequestTranslationStatusToRequestTranslation() {
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, buildSscsDocuments(false), buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(caseData.getOriginalDocuments()).isNotNull();
-        assertThat(caseData.getOriginalDocuments().getListItems().getFirst().getCode()).isEqualTo(ENGLISH_PDF);
-        assertThat(caseData.getSscsDocument().getFirst().getValue().getDocumentTranslationStatus().getId())
-            .isEqualTo(SscsDocumentTranslationStatus.TRANSLATION_COMPLETE.getId());
-        assertThat(caseData.getTranslationWorkOutstanding()).isEqualTo("Yes");
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getOriginalDocumentFileName()).isEqualTo(ENGLISH_PDF);
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getDocumentLanguage()).isEqualTo("welsh");
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isEqualTo(EventType.SEND_TO_DWP.getCcdType());
+        assertNotNull(caseData.getOriginalDocuments());
+        assertEquals(ENGLISH_PDF, caseData.getOriginalDocuments().getListItems().get(0).getCode());
+        assertEquals(SscsDocumentTranslationStatus.TRANSLATION_COMPLETE.getId(),
+            caseData.getSscsDocument().get(0).getValue().getDocumentTranslationStatus().getId());
+        assertEquals("No", caseData.getTranslationWorkOutstanding());
+        assertEquals(ENGLISH_PDF,
+            caseData.getSscsWelshDocuments().get(0).getValue().getOriginalDocumentFileName());
+        assertEquals("welsh",
+            caseData.getSscsWelshDocuments().get(0).getValue().getDocumentLanguage());
+        assertEquals(EventType.SEND_TO_DWP.getCcdType(), caseData.getSscsWelshPreviewNextEvent());
     }
 
     @Test
-    void updateCaseWhenRip1DwpDocumentSetToRequestTranslationStatusToRequestTranslation() {
-        final Callback<SscsCaseData> callback = buildCallback("rip1.pdf", null, buildSscsWelshDocuments("rip1Document"), buildDwpDocuments(), State.VALID_APPEAL);
+    public void updateCaseWhenOnlyOneDocumentAndMoreThanOneSetToRequestTranslationStatusToRequestTranslation() {
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, buildSscsDocuments(true), buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertNotNull(caseData.getOriginalDocuments());
+        assertEquals(ENGLISH_PDF, caseData.getOriginalDocuments().getListItems().get(0).getCode());
+        assertEquals(SscsDocumentTranslationStatus.TRANSLATION_COMPLETE.getId(),
+            caseData.getSscsDocument().get(0).getValue().getDocumentTranslationStatus().getId());
+        assertEquals("Yes", caseData.getTranslationWorkOutstanding());
+        assertEquals(ENGLISH_PDF,
+            caseData.getSscsWelshDocuments().get(0).getValue().getOriginalDocumentFileName());
+        assertEquals("welsh",
+            caseData.getSscsWelshDocuments().get(0).getValue().getDocumentLanguage());
+        assertEquals(EventType.SEND_TO_DWP.getCcdType(), caseData.getSscsWelshPreviewNextEvent());
 
-        assertThat(caseData.getOriginalDocuments()).isNotNull();
-        assertThat(caseData.getOriginalDocuments().getListItems().getFirst().getCode()).isEqualTo("rip1.pdf");
-        assertThat(caseData.getDwpDocuments().getFirst().getValue().getDocumentTranslationStatus().getId())
-            .isEqualTo(SscsDocumentTranslationStatus.TRANSLATION_COMPLETE.getId());
-        assertThat(caseData.getTranslationWorkOutstanding()).isEqualTo("No");
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getOriginalDocumentFileName()).isEqualTo("rip1.pdf");
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getDocumentLanguage()).isEqualTo("welsh");
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isNull();
     }
 
     @Test
-    void shouldUpdateWithDirectionIssuedWelshNextEventCorrectlyBasedOnDirectionNoticeDocumentType() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, singletonList(
-            buildSscsDocument(ENGLISH_PDF, "docUrl",
-                DocumentType.DIRECTION_NOTICE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.DIRECTION_NOTICE.getValue()), null, State.VALID_APPEAL);
+    public void updateCaseWhenRip1DwpDocumentSetToRequestTranslationStatusToRequestTranslation() {
+        Callback<SscsCaseData> callback = buildCallback("rip1.pdf", UPLOAD_WELSH_DOCUMENT, null, buildSscsWelshDocuments("rip1Document"), buildDwpDocuments(), State.VALID_APPEAL);
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isEqualTo(EventType.DIRECTION_ISSUED_WELSH.getCcdType());
+        assertNotNull(caseData.getOriginalDocuments());
+        assertEquals("rip1.pdf", caseData.getOriginalDocuments().getListItems().get(0).getCode());
+        assertEquals(SscsDocumentTranslationStatus.TRANSLATION_COMPLETE.getId(),
+                caseData.getDwpDocuments().get(0).getValue().getDocumentTranslationStatus().getId());
+        assertEquals("No", caseData.getTranslationWorkOutstanding());
+        assertEquals("rip1.pdf",
+                caseData.getSscsWelshDocuments().get(0).getValue().getOriginalDocumentFileName());
+        assertEquals("welsh",
+                caseData.getSscsWelshDocuments().get(0).getValue().getDocumentLanguage());
+        assertNull(caseData.getSscsWelshPreviewNextEvent());
     }
 
     @Test
-    void shouldUpdateWithDecisionIssuedWelshNextEventCorrectlyBasedOnDecisionNoticeDocumentType() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            singletonList(buildSscsDocument(ENGLISH_PDF, "docUrl", DocumentType.DECISION_NOTICE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.DECISION_NOTICE.getValue()), null, State.VALID_APPEAL);
+    public void shouldUpdateWithDirectionIssuedWelshNextEventCorrectlyBasedOnDirectionNoticeDocumentType() {
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
-        caseData.setState(State.VALID_APPEAL);
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument(ENGLISH_PDF, "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.DIRECTION_NOTICE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.DIRECTION_NOTICE.getValue()), null, State.VALID_APPEAL);
 
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isEqualTo(EventType.DECISION_ISSUED_WELSH.getCcdType());
-    }
-
-    @Test
-    void shouldUpdateWithDecisionIssuedWelshNextEventCorrectlyBasedOnReinstatementRequestDocumentType() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            singletonList(buildSscsDocument(ENGLISH_PDF, "docUrl", DocumentType.REINSTATEMENT_REQUEST.getValue(), "A")), buildSscsWelshDocuments(DocumentType.REINSTATEMENT_REQUEST.getValue()), null, State.VALID_APPEAL);
-
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isEqualTo(UPDATE_CASE_ONLY.getCcdType());
+        assertEquals(EventType.DIRECTION_ISSUED_WELSH.getCcdType(), caseData.getSscsWelshPreviewNextEvent());
     }
 
     @Test
-    void shouldUpdateWithUploadWelshDocumentEventCorrectlyBasedOnAppellantEvidenceDocumentType() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            singletonList(buildSscsDocument(ENGLISH_PDF, "docUrl", DocumentType.APPELLANT_EVIDENCE.getValue(), null)), buildSscsWelshDocuments(DocumentType.APPELLANT_EVIDENCE.getValue()), null, State.VALID_APPEAL);
+    public void shouldUpdateWithDecisionIssuedWelshNextEventCorrectlyBasedOnDecisionNoticeDocumentType() {
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument(ENGLISH_PDF, "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.DECISION_NOTICE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.DECISION_NOTICE.getValue()), null, State.VALID_APPEAL);
+
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isNull();
+        assertEquals(EventType.DECISION_ISSUED_WELSH.getCcdType(), caseData.getSscsWelshPreviewNextEvent());
     }
 
     @Test
-    void shouldUpdateWithFinalDecisionIssuedWelshNextEventCorrectlyBasedOnDecisionNoticeDocumentType() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            singletonList(buildSscsDocument(ENGLISH_PDF, "docUrl", DocumentType.FINAL_DECISION_NOTICE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.FINAL_DECISION_NOTICE.getValue()), null, State.VALID_APPEAL);
+    public void shouldUpdateWithDecisionIssuedWelshNextEventCorrectlyBasedOnReinstatementRequestDocumentType() {
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument(ENGLISH_PDF, "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.REINSTATEMENT_REQUEST.getValue(), "A")), buildSscsWelshDocuments(DocumentType.REINSTATEMENT_REQUEST.getValue()), null, State.VALID_APPEAL);
+
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isEqualTo(EventType.ISSUE_FINAL_DECISION_WELSH.getCcdType());
+        assertEquals(UPDATE_CASE_ONLY.getCcdType(), caseData.getSscsWelshPreviewNextEvent());
     }
 
     @Test
-    void shouldAddBundleAdditionForAppellantEvidenceDocumentType() {
-        final Callback<SscsCaseData> callback = buildCallback("Addition A - my filename.pdf",
-            singletonList(buildSscsDocument("Addition A - my filename.pdf", "docUrl", DocumentType.APPELLANT_EVIDENCE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.APPELLANT_EVIDENCE.getValue()), null, State.VALID_APPEAL);
+    public void shouldUpdateWithUploadWelshDocumentEventCorrectlyBasedOnAppellantEvidenceDocumentType() {
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument(ENGLISH_PDF, "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.APPELLANT_EVIDENCE.getValue(), null)), buildSscsWelshDocuments(DocumentType.APPELLANT_EVIDENCE.getValue()), null, State.VALID_APPEAL);
 
-        final String documentFooterText = "Appellant evidence";
-        final SscsWelshDocumentDetails welshDocumentDetails = caseData.getSscsWelshPreviewDocuments().getFirst().getValue();
-        when(welshFooterService.addFooter(welshDocumentDetails.getDocumentLink(), documentFooterText, "WEL-A")).thenReturn(DocumentLink.builder().documentFilename("New Doc").build());
-
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isNull();
-        final SscsWelshDocumentDetails sscsWelshDocumentDetails = caseData.getSscsWelshDocuments().getFirst().getValue();
-        assertThat(sscsWelshDocumentDetails.getOriginalDocumentFileName()).isEqualTo("Addition A - my filename.pdf");
-        assertThat(sscsWelshDocumentDetails.getBundleAddition()).isEqualTo("WEL-A");
-        assertThat(sscsWelshDocumentDetails.getDocumentFileName()).isEqualTo("Addition WEL-A - my filename.pdf");
-        assertThat(sscsWelshDocumentDetails.getEvidenceIssued()).isEqualTo("No");
-    }
-
-    @Test
-    void shouldAddNewWelshDocumentToTheFrontOfExistingSscsWelshDocuments() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, null, buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
-
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
-
-        final SscsWelshDocument existingWelshDocument = SscsWelshDocument.builder()
-            .value(SscsWelshDocumentDetails.builder()
-                .documentLink(DocumentLink.builder().documentFilename("existing-welsh.pdf").build())
-                .documentLanguage("welsh")
-                .build())
-            .build();
-        final List<SscsWelshDocument> existingWelshDocuments = new ArrayList<>();
-        existingWelshDocuments.add(existingWelshDocument);
-        caseData.setSscsWelshDocuments(existingWelshDocuments);
-
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(caseData.getSscsWelshDocuments()).hasSize(2);
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getOriginalDocumentFileName()).isEqualTo(ENGLISH_PDF);
-        assertThat(caseData.getSscsWelshDocuments().get(1)).isEqualTo(existingWelshDocument);
+        assertNull(caseData.getSscsWelshPreviewNextEvent());
+
     }
 
     @Test
-    void shouldSortWelshDocumentsByDateAddedDescendingWhenAddingToExistingList() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, null, buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
+    public void shouldUpdateWithFinalDecisionIssuedWelshNextEventCorrectlyBasedOnDecisionNoticeDocumentType() {
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
-        caseData.setState(State.VALID_APPEAL);
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument(ENGLISH_PDF, "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.FINAL_DECISION_NOTICE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.FINAL_DECISION_NOTICE.getValue()), null, State.VALID_APPEAL);
 
-        final String futureDate = LocalDate.now().plusDays(1).toString();
-        final SscsWelshDocument existingWelshDocument = SscsWelshDocument.builder()
-            .value(SscsWelshDocumentDetails.builder()
-                .documentLink(DocumentLink.builder().documentFilename("existing-welsh.pdf").build())
-                .documentLanguage("welsh")
-                .documentDateAdded(futureDate)
-                .build())
-            .build();
-        final List<SscsWelshDocument> existingWelshDocuments = new ArrayList<>();
-        existingWelshDocuments.add(existingWelshDocument);
-        caseData.setSscsWelshDocuments(existingWelshDocuments);
-
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
-
-        assertThat(caseData.getSscsWelshDocuments()).hasSize(2);
-        assertThat(caseData.getSscsWelshDocuments().getFirst()).isEqualTo(existingWelshDocument);
-        assertThat(caseData.getSscsWelshDocuments().get(1).getValue().getOriginalDocumentFileName()).isEqualTo(ENGLISH_PDF);
-    }
-
-    @Test
-    void shouldAddMultipleNewWelshDocumentsToTheFrontOfTheListInReverseOrder() {
-        final SscsWelshDocument previewDocument1 = SscsWelshDocument.builder()
-            .value(SscsWelshDocumentDetails.builder()
-                .documentLink(DocumentLink.builder().documentFilename("welsh1.pdf").build())
-                .documentLanguage("welsh")
-                .documentType(DocumentType.SSCS1.getValue())
-                .build())
-            .build();
-        final SscsWelshDocument previewDocument2 = SscsWelshDocument.builder()
-            .value(SscsWelshDocumentDetails.builder()
-                .documentLink(DocumentLink.builder().documentFilename("welsh2.pdf").build())
-                .documentLanguage("welsh")
-                .documentType(DocumentType.SSCS1.getValue())
-                .build())
-            .build();
-
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, null, List.of(previewDocument1, previewDocument2), null, State.VALID_APPEAL);
-
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.VALID_APPEAL);
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(caseData.getSscsWelshDocuments()).hasSize(2);
-        assertThat(caseData.getSscsWelshDocuments().getFirst().getValue().getDocumentLink().getDocumentFilename()).isEqualTo("welsh2.pdf");
-        assertThat(caseData.getSscsWelshDocuments().get(1).getValue().getDocumentLink().getDocumentFilename()).isEqualTo("welsh1.pdf");
+        assertEquals(EventType.ISSUE_FINAL_DECISION_WELSH.getCcdType(), caseData.getSscsWelshPreviewNextEvent());
     }
 
     @Test
-    void givenInterlocReviewStateshouldNotSetReviewState() {
-        final Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF,
-            singletonList(buildSscsDocument(ENGLISH_PDF, "docUrl", DocumentType.APPELLANT_EVIDENCE.getValue(), null)), buildSscsWelshDocuments(DocumentType.APPELLANT_EVIDENCE.getValue()), null, State.INTERLOCUTORY_REVIEW_STATE);
+    public void shouldAddBundleAdditionForAppellantEvidenceDocumentType() {
 
-        final SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+        Callback<SscsCaseData> callback = buildCallback("Addition A - my filename.pdf", UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument("Addition A - my filename.pdf", "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.APPELLANT_EVIDENCE.getValue(), "A")), buildSscsWelshDocuments(DocumentType.APPELLANT_EVIDENCE.getValue()), null, State.VALID_APPEAL);
+
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
+
+        String documentFooterText = "Appellant evidence";
+        SscsWelshDocumentDetails welshDocumentDetails = caseData.getSscsWelshPreviewDocuments().get(0).getValue();
+        when(welshFooterService.addFooter(welshDocumentDetails.getDocumentLink(), documentFooterText, "A")).thenReturn(DocumentLink.builder().documentFilename("New Doc").build());
+
+        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+
+        assertNull(caseData.getSscsWelshPreviewNextEvent());
+        SscsWelshDocumentDetails sscsWelshDocumentDetails = caseData.getSscsWelshDocuments().get(0).getValue();
+        assertEquals("Addition A - my filename.pdf",
+            sscsWelshDocumentDetails.getOriginalDocumentFileName());
+        assertEquals("WEL-A",
+            sscsWelshDocumentDetails.getBundleAddition());
+        assertEquals("Addition WEL-A - my filename.pdf",
+            sscsWelshDocumentDetails.getDocumentFileName());
+        assertEquals("No",
+            sscsWelshDocumentDetails.getEvidenceIssued());
+
+    }
+
+    @Test
+    public void givenInterlocReviewStateshouldNotSetReviewState() {
+
+        Callback<SscsCaseData> callback = buildCallback(ENGLISH_PDF, UPLOAD_WELSH_DOCUMENT, Arrays.asList(buildSscsDocument(ENGLISH_PDF, "docUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.APPELLANT_EVIDENCE.getValue(), null)), buildSscsWelshDocuments(DocumentType.APPELLANT_EVIDENCE.getValue()), null, State.INTERLOCUTORY_REVIEW_STATE);
+
+        SscsCaseData caseData = callback.getCaseDetails().getCaseData();
         caseData.setState(State.INTERLOCUTORY_REVIEW_STATE);
         caseData.setWelshInterlocNextReviewState("reviewByTcw");
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertThat(caseData.getInterlocReviewState()).isEqualTo(REVIEW_BY_TCW);
-        assertThat(caseData.getSscsWelshPreviewNextEvent()).isNull();
+        assertEquals(REVIEW_BY_TCW, caseData.getInterlocReviewState());
+        assertNull(caseData.getSscsWelshPreviewNextEvent());
     }
 
-    private Callback<SscsCaseData> buildCallback(final String dynamicListItemCode,
-        final List<SscsDocument> sscsDocuments, final List<SscsWelshDocument> welshDocuments, final List<DwpDocument> dwpDocuments, final State state) {
+    private Object[] generateCanHandleScenarios() {
+        Callback<SscsCaseData> callbackWithValidEventOption =
+            buildCallback("callbackWithValidEventOption", UPLOAD_WELSH_DOCUMENT, buildSscsDocuments(false), buildSscsWelshDocuments(DocumentType.SSCS1.getValue()), null, State.VALID_APPEAL);
+        return new Object[]{new Object[]{ABOUT_TO_SUBMIT, callbackWithValidEventOption, true}};
+    }
+
+    private Callback<SscsCaseData> buildCallback(String dynamicListItemCode, EventType eventType,
+                                                 List<SscsDocument> sscsDocuments, List<SscsWelshDocument> welshDocuments, List<DwpDocument> dwpDocuments, State state) {
 
         final DynamicList dynamicList = new DynamicList(new DynamicListItem(dynamicListItemCode, "label"),
-            singletonList(new DynamicListItem(dynamicListItemCode, "label")));
+            Collections.singletonList(new DynamicListItem(dynamicListItemCode, "label")));
 
-        final SscsCaseData sscsCaseData = SscsCaseData.builder()
+        SscsCaseData sscsCaseData = SscsCaseData.builder()
             .originalDocuments(dynamicList)
             .sscsDocument(sscsDocuments)
             .dwpDocuments(dwpDocuments)
             .sscsWelshPreviewDocuments(welshDocuments)
             .build();
-        final CaseDetails<SscsCaseData> caseDetails = new CaseDetails<>(123L, "sscs",
+        CaseDetails<SscsCaseData> caseDetails = new CaseDetails<>(123L, "sscs",
             state, sscsCaseData, LocalDateTime.now(), "Benefit");
-        return new Callback<>(caseDetails, Optional.empty(), EventType.UPLOAD_WELSH_DOCUMENT, false);
+        return new Callback<>(caseDetails, Optional.empty(), eventType, false);
     }
 
-    private List<SscsDocument> buildSscsDocuments(final boolean moreThanOneDoc) {
-        final SscsDocument sscs1Doc = buildSscsDocument(ENGLISH_PDF, "/anotherUrl", DocumentType.SSCS1.getValue(), "A");
-        final SscsDocument sscs2Doc = buildSscsDocument("anything.pdf", "/anotherUrl", DocumentType.SSCS1.getValue(), "A");
+    private List<SscsDocument> buildSscsDocuments(boolean moreThanOneDoc) {
 
-        final List<SscsDocument> sscsDocuments = new ArrayList<>();
+        SscsDocument sscs1Doc = buildSscsDocument(ENGLISH_PDF, "/anotherUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.SSCS1.getValue(), "A");
+
+        SscsDocument sscs2Doc = buildSscsDocument("anything.pdf", "/anotherUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.SSCS1.getValue(), "A");
+
+        List<SscsDocument> sscsDocuments = new ArrayList<>();
         sscsDocuments.add(sscs1Doc);
         if (moreThanOneDoc) {
             sscsDocuments.add(sscs2Doc);
@@ -342,15 +305,16 @@ class UploadWelshDocumentsAboutToSubmitHandlerTest {
     }
 
     private List<DwpDocument> buildDwpDocuments() {
-        final DwpDocument dwpDoc1 = buildDwpDocument(DocumentType.AUDIO_DOCUMENT.getValue());
 
-        final List<DwpDocument> dwpDocuments = new ArrayList<>();
+        DwpDocument dwpDoc1 = buildDwpDocument("english.mp3", "/anotherUrl", SscsDocumentTranslationStatus.TRANSLATION_REQUESTED, DocumentType.AUDIO_DOCUMENT.getValue());
+
+        List<DwpDocument> dwpDocuments = new ArrayList<>();
         dwpDocuments.add(dwpDoc1);
         return dwpDocuments;
     }
 
-    private List<SscsWelshDocument> buildSscsWelshDocuments(final String documentType) {
-        return singletonList(SscsWelshDocument.builder()
+    private List<SscsWelshDocument> buildSscsWelshDocuments(String documentType) {
+        return Arrays.asList(SscsWelshDocument.builder()
             .value(SscsWelshDocumentDetails.builder()
                 .documentLink(DocumentLink.builder()
                     .documentUrl("/anotherUrl")
@@ -362,8 +326,8 @@ class UploadWelshDocumentsAboutToSubmitHandlerTest {
             .build());
     }
 
-    private List<SscsWelshDocument> buildInvalidSscsWelshDocuments(final String documentType) {
-        return singletonList(SscsWelshDocument.builder()
+    private List<SscsWelshDocument> buildInvalidSscsWelshDocuments(String documentType) {
+        return Arrays.asList(SscsWelshDocument.builder()
             .value(SscsWelshDocumentDetails.builder()
                 .documentLanguage("welsh")
                 .documentType(documentType)
@@ -371,14 +335,14 @@ class UploadWelshDocumentsAboutToSubmitHandlerTest {
             .build());
     }
 
-    private SscsDocument buildSscsDocument(final String filename, final String documentUrl, final String documentType, final String bundleAddition) {
+    private SscsDocument buildSscsDocument(String filename, String documentUrl, SscsDocumentTranslationStatus translationRequested, String documentType, String bundleAddition) {
         return SscsDocument.builder()
             .value(SscsDocumentDetails.builder()
                 .documentLink(DocumentLink.builder()
                     .documentUrl(documentUrl)
                     .documentFilename(filename)
                     .build())
-                .documentTranslationStatus(SscsDocumentTranslationStatus.TRANSLATION_REQUESTED)
+                .documentTranslationStatus(translationRequested)
                 .documentType(documentType)
                 .documentFileName(filename)
                 .bundleAddition(bundleAddition)
@@ -386,16 +350,16 @@ class UploadWelshDocumentsAboutToSubmitHandlerTest {
             .build();
     }
 
-    private DwpDocument buildDwpDocument(final String documentType) {
+    private DwpDocument buildDwpDocument(String filename, String documentUrl, SscsDocumentTranslationStatus translationRequested, String documentType) {
         return DwpDocument.builder()
                 .value(DwpDocumentDetails.builder()
                         .avDocumentLink(DocumentLink.builder()
-                                .documentUrl("/anotherUrl")
-                                .documentFilename("english.mp3")
+                                .documentUrl(documentUrl)
+                                .documentFilename(filename)
                                 .build())
-                        .documentTranslationStatus(SscsDocumentTranslationStatus.TRANSLATION_REQUESTED)
+                        .documentTranslationStatus(translationRequested)
                         .documentType(documentType)
-                        .documentFileName("english.mp3")
+                        .documentFileName(filename)
                         .documentLink(DocumentLink.builder()
                                 .documentUrl("rip1url")
                                 .documentFilename("rip1.pdf")
